chore: recoil, types 폴더를 절대경로로 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
       "components/*": ["./components/*"],
       "hooks/*": ["./hooks/*"],
       "pages/*": ["./pages/*"],
+      "recoil/*": ["./recoil/*"],
+      "types/*": ["./types/*"],
       "utils/*": ["./utils/*"]
     }
   },
