chore: tsconfig에서 msw 관련 코드 제거

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "utils/*": ["./utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./public/mockServiceWorker.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
