chore: recoil -> store로 전역상태폴더명 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "components/*": ["./components/*"],
       "hooks/*": ["./hooks/*"],
       "pages/*": ["./pages/*"],
-      "recoil/*": ["./recoil/*"],
+      "stores/*": ["./stores/*"],
       "types/*": ["./types/*"],
       "utils/*": ["./utils/*"]
     }
