--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
+    "kakao.maps.d.ts": "^0.1.33",
     "lint-staged": "^13.1.1",
     "postcss": "^8.4.21",
     "postcss-syntax": "^0.36.2",
