--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "pages/*": ["./pages/*"],
       "stores/*": ["./stores/*"],
       "types/*": ["./types/*"],
-      "utils/*": ["./utils/*"]
+      "utils/*": ["./utils/*"],
+      "styles/*": ["./styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
