--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "simple-import-sort/exports": "error",
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
