--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_KAKAO_MAP_API_KEY=카카오맵 API KEY
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=구글맵 API KEY
+
+RECOIL_DUPLICATE_ATOM_KEY_CHECKING_ENABLED=false
