--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "react/display-name": "off",
     "react/react-in-jsx-scope": "off",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
