--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_KAKAO_MAP_API_KEY=카카오맵 API KEY
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=구글맵 API KEY
 NEXT_PUBLIC_KAKAO_SEARCH_API_KEY=카카오검색 API KEY
+NEXT_PUBLIC_API_END_POINT=서버 엔드포인트
 RECOIL_DUPLICATE_ATOM_KEY_CHECKING_ENABLED=false
