chore: react-calendar 라이브러리 설치

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^9.0.7",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
