chore: react-calendar, @types 라이브러리 dev-dependency로 재설치

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "framer-motion": "^9.0.7",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
@@ -39,6 +38,7 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@tanstack/eslint-plugin-query": "^4.24.7",
     "@types/google.maps": "^3.52.0",
+    "@types/react-calendar": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint-config-prettier": "^8.6.0",
@@ -51,6 +51,7 @@
     "postcss": "^8.4.21",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.4",
+    "react-calendar": "^4.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-rational-order": "^0.0.4",
