--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^9.0.7",
     "moment": "^2.29.4",
     "next": "13.1.6",
+    "rc-time-picker": "^3.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
