--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.7",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "rc-time-picker": "^3.7.3",
@@ -41,6 +42,7 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@tanstack/eslint-plugin-query": "^4.24.7",
     "@types/google.maps": "^3.52.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react-calendar": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
