--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.6",
     "@types/moment": "^2.13.0",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "recoil": "^0.7.6",
+    "sockjs-client": "^1.6.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@types/google.maps": "^3.52.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/react-calendar": "^3.9.0",
+    "@types/sockjs-client": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint-config-prettier": "^8.6.0",
